fix gallery wrap

--- a/css/style.scss
+++ b/css/style.scss
@@ -3613,7 +3613,29 @@ hero slider s2
 
 .wpo-gallery-section .wpo-gallery-container .grid .wpo-gallery-item {
   position: relative;
+
+  >a
+  {
+    padding-top: 123%;
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    >img 
+    {
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      position: absolute;
+      object-fit: cover;
+    }
+  }
+  
 }
+
+
 
 .wpo-gallery-section .wpo-gallery-container .grid .wpo-gallery-item:before {
   position: absolute;
@@ -3624,6 +3646,7 @@ hero slider s2
   content: "";
   background: rgba(55, 87, 247, 0.8);
   transition: all 0.3s;
+  z-index: 1;
 }
 
 .wpo-gallery-section .wpo-gallery-container .grid .wpo-gallery-item:hover:before {
@@ -3633,6 +3656,7 @@ hero slider s2
 .wpo-gallery-section .wpo-gallery-container .grid .wpo-gallery-item:hover .wpo-gallery-text {
   opacity: 1;
   visibility: visible;
+  z-index: 2;
 }
 
 @media (max-width: 991px) {
@@ -4716,6 +4740,7 @@ hero slider s2
 .wpo-project-single-section .wpo-project-single-wrap .wpo-project-single-content .wpo-project-single-content-des .wpo-project-single-content-des-wrap .wpo-project-single-content-des-right {
   max-width: 380px;
   flex-basis: 35%;
+  margin-bottom: 30px;
 }
 
 @media (max-width: 1200px) {
@@ -4767,11 +4792,27 @@ hero slider s2
 .wpo-project-single-section .wpo-project-single-wrap .wpo-project-single-content .wpo-project-single-content-des .wpo-project-single-sub-img ul {
   display: flex;
   list-style: none;
+  flex-wrap: wrap;
+  gap:10px;
 }
 
 .wpo-project-single-section .wpo-project-single-wrap .wpo-project-single-content .wpo-project-single-content-des .wpo-project-single-sub-img li {
   padding-left: 0px;
   padding-right: 10px;
+  padding-top: 42.5%;
+  width: calc(50% - 5px);
+  position: relative;
+
+  img
+  {
+  width: 100%;
+   height: 100%;
+   position: absolute;
+   object-fit: cover;
+   left: 0;
+   top:0; 
+  }
+
 }
 
 .wpo-project-single-section .wpo-project-single-wrap .wpo-project-single-content .wpo-project-single-content-des .wpo-project-single-sub-img li:last-child {
